# MAI_DAlabs

./: README.md
LR_DA1/: main.cpp  test.txt  заметки
LR_DA1 tex/src/: titlepage.tex
LR_DA1_tex/: report.aux
LR_DA1_tex/src/: banchmark.tex  problem.tex  src.tex  thinks.tex
LR_DA2/: da2v2.cpp  main(s commentami).cpp  main.cpp  report2.docx  report3.docx  test1.txt  test2.txt
LR_DA2 tex/src/: problem.tex  src.tex
LR_DA2_tex/: report.aux
LR_DA2_tex/src/: banchmark.tex  thinks.tex  titlepage.tex
LR_DA3 tex/: report.out
LR_DA3 tex/src/: thinks.tex  titlepage.tex
LR_DA3_tex/: report.aux
LR_DA3_tex/src/: literature.tex  problem.tex  src.tex
LR_DA4/: Makefile  main.cpp  search.hpp  test1.txt  test2.txt  test3.txt
LR_DA4 tex/src/: src.tex  thinks.tex
LR_DA4_tex/: report.aux
LR_DA4_tex/src/: banchmark.tex  problem.tex  titlepage.tex
LR_DA5/: CMakeLists.txt  benchmark.cpp  test.txt  test_generator.py
LR_DA5 tex/: src.tex
LR_DA5 tex/src/: problem.tex  titlepage.tex
LR_DA5/solution/: Makefile  main.cpp  st.cpp
LR_DA5_tex/: report.aux
LR_DA5_tex/src/: banchmark.tex  src.tex  thinks.tex
LR_DA6/: Makefile  bigint.cpp  bigint.hpp  main.cpp
LR_DA6_tex/: report.aux
LR_DA6_tex/src/: banchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
LR_DA7/: main.cpp
LR_DA7/tests/: 2.in
LR_DA7_tex/: report.aux
LR_DA7_tex/src/: banchmark.tex  problem.tex  src.tex  thinks.tex  titlepage.tex
LR_DA8/: main.cpp
LR_DA8_tex/: report.aux
LR_DA8_tex/src/: src.tex  (+4 more)
LR_DA9/: CMakeLists.txt  benchmark.cpp  solution.tar
LR_DA9_tex/: report.aux
(+6 files in other folders)
